перед созданием api

--- a/germax-frontend/src/pages/index/index.html
+++ b/germax-frontend/src/pages/index/index.html
@@ -6,6 +6,8 @@
 	<title>Document</title>
 </head>
 <body>
-	Основной контент
+	<h1>Главная страница</h1>
+
+	<img src="/assets/GERMAX.jpg" alt="">
 </body>
 </html>
