--- a/germax-frontend/src/pages/users/admin/subpages/client/infoClient.html
+++ b/germax-frontend/src/pages/users/admin/subpages/client/infoClient.html
@@ -38,6 +38,7 @@
                                 <p class="text-muted">Coordonnées: +33 1 23 45 67 89</p>
                                 <p class="text-muted">Email: jean.dupont@example.com</p>
                                 <p class="text-muted">Adresse: 123, rue de la République, Paris</p>
+								<a href="./modifyInfoClient.html" class="btn btn-primary mt-3">Mettre à jour</a>
                                 <hr class="my-4">
                                 <h4 class="mb-3">Détails de la location:</h4>
                                 <p class="mb-2">Équipement loué: Appareil photo professionnel</p>
@@ -46,6 +47,8 @@
                                 <p class="mb-2">Fin de location: 31/07/2024</p>
                                 <p class="mb-2">Temps restant: <strong>3 jours</strong></p>
                                 <p class="mb-2">Statut de la location: <span class="badge badge-success">Active</span></p>
+                                <button type="button" class="btn btn-warning mt-3">Prolonger la location</button>
+                                <button type="button" class="btn btn-warning mt-3">Arrêter la location</button>
                             </div>
                             <div class="col-md-4 d-flex align-items-center justify-content-center">
                                 <div class="client-photo bg-primary">
