--- a/germax-frontend/src/pages/users/admin/dashboard.html
+++ b/germax-frontend/src/pages/users/admin/dashboard.html
@@ -6,53 +6,49 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<!-- Bootstrap CSS -->
 	<link href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
-
 	<link href="./style.css" rel="stylesheet">
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css">
 	<title>Dashboard</title>
-	<style>
-        /* Добавляем стили для отображения выпадающего списка при наведении */
-        .navbar .dropdown:hover .dropdown-menu {
-            display: block;
-        }
-    </style>
 </head>
 
 <body>
 	<div class="container-fluid">
-		<!-- ... your existing navbar ... -->
+		<!-- Боковое меню теперь находится наверху страницы и занимает полную ширину -->
 
+
+		<!-- Верхнее меню перемещено на место бокового меню -->
 		<nav class="navbar navbar-expand-lg navbar-light bg-light">
 			<a class="navbar-brand" href="/school/">
-			  <img src="../../assets/GERMAX.jpg" alt="logo" style="height: 50px;">
+				<img src="../../assets/GERMAX.jpg" alt="logo" style="height: 50px;">
 			</a>
-
 			<div class="collapse navbar-collapse justify-content-end" id="navbarSupport">
 				<ul class="navbar-nav align-items-center">
 					<li class="nav-item">
-						<a class="nav-link" href="link_to_other_page.html">
-							<i class="fa fa-question-circle" aria-hidden="true"></i> Foire Aux Questions
-						</a>
-					</li>
-					<li class="nav-item">
-						<a class="nav-link" href="#" data-toggle="modal" data-target="#notificationsModal">
-							<i class="fa fa-bell"></i>
+						<a class="nav-link" href="./subpages/nav/notfifcations.html" data-toggle="modal"
+							data-target="#notificationsModal">
+							<i class="fa fa-bell">Notifications</i>
 							<span class="badge badge-danger">3</span>
 						</a>
 					</li>
 					<li class="nav-item">
-						<a class="nav-link" href="account-settings.html">
+						<a class="nav-link" href="./subpages/support.html" data-toggle="modal"
+							data-target="#supportModal">
+							<i class="fa fa-question-circle">Support</i>
+						</a>
+					</li>
+					<li class="nav-item">
+						<a class="nav-link" href="./subpages/nav/settings.html">
 							<i class="fa fa-cog" aria-hidden="true"></i>
 						</a>
 					</li>
-					<!-- Добавляем выпадающий список, который отображается при наведении -->
 					<li class="nav-item dropdown">
-						<a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+						<a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" data-toggle="dropdown"
+							aria-haspopup="true" aria-expanded="false">
 							<i class="fa fa-user"></i>
 						</a>
 						<div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-							<a class="dropdown-item" href="profile.html">Profil</a>
-							<a class="dropdown-item" href="account-settings.html">Paramètres</a>
+							<a class="dropdown-item" href="./dashboard.html">Profil</a>
+							<a class="dropdown-item" href="./subpages/nav/settings.html">Paramètres</a>
 							<a class="dropdown-item" href="login.html">Déconnexion</a>
 						</div>
 					</li>
@@ -60,22 +56,76 @@
 			</div>
 		</nav>
 
-		<div class="row mt-3">
-			<div class="col-md-3">
-				<div class="nav flex-column nav-pills" id="v-pills-tab" role="tablist" aria-orientation="vertical">
-					<a class="nav-link active" id="locationsLink" href="#">Locations</a>
-					<a class="nav-link" id="emprunteursLink" href="#">Locataires</a>
-					<a class="nav-link" id="indicateursLink" href="#">Indicateurs clés</a>
+		<div class="main-content d-flex">
+			<div class="nav flex-column nav-pills" id="v-pills-tab" role="tablist" aria-orientation="vertical">
+				<a class="nav-link active" id="locationsLink" href="./subpages/loansCalendar.html">Calendrier des
+					locations</a>
+				<a class="nav-link" id="emprunteursLink" href="./subpages/client/addClient.html">Gestion des
+					locataires</a>
+				<a class="nav-link" id="indicateursLink" href="./subpages/mainIndicators.html">Indicateurs clés</a>
+			</div>
+			<div class="content">
+				<div class="row mb-4">
+					<div class="col-md-4">
+						<div class="profile-img">
+							<img src="https://via.placeholder.com/150" alt="фото профиля" class="img-thumbnail">
+							<input type="file" name="file" />
+						</div>
+					</div>
+				</div>
+
+				<div class="row section">
+					<div class="col-md-12">
+						<h2>Новые запросы на аренду</h2>
+						<ul class="list-group">
+							<li class="list-group-item">Запрос на аренду оборудования XYZ от [Имя Арендатора] <button
+									class="btn btn-info btn-sm">Просмотр</button></li>
+						</ul>
+					</div>
+				</div>
+
+				<div class="row section mt-4">
+					<div class="col-md-12">
+						<h2>Последние действия и обновления</h2>
+						<table class="table">
+							<thead>
+								<tr>
+									<th>Дата</th>
+									<th>Действие</th>
+									<th>Арендатор</th>
+									<th>Оборудование</th>
+								</tr>
+							</thead>
+							<tbody>
+								<tr>
+									<td>10/10/2022</td>
+									<td>Добавлен новый арендатор</td>
+									<td>[Имя Арендатора]</td>
+									<td>-</td>
+								</tr>
+								<tr>
+									<td>11/10/2022</td>
+									<td>Аренда продлена</td>
+									<td>[Имя Арендатора]</td>
+									<td>Оборудование XYZ</td>
+								</tr>
+								<!-- Добавьте дополнительные действия здесь -->
+							</tbody>
+						</table>
+					</div>
 				</div>
 			</div>
-
-	<!-- Optional JavaScript; choose one of the two! -->
-
+		</div>
+	</div>
 	<!-- Option 1: jQuery and Bootstrap Bundle (includes Popper) -->
+	<footer class="footer align-items-center justify-content-center text-center">
+			<a class="nav-link" href="link_to_other_page.html">
+				<i class="fa fa-question-circle" aria-hidden="true"></i> Foire Aux Questions
+			</a>
+	</footer>
 	<script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
 	<script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.5.2/dist/umd/popper.min.js"></script>
 	<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
-
 </body>
 
 </html>
