--- a/germax-frontend/src/pages/users/admin/dashboard.html
+++ b/germax-frontend/src/pages/users/admin/dashboard.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="fr">
 
 <head>
 	<meta charset="UTF-8">
@@ -13,10 +13,6 @@
 
 <body>
 	<div class="container-fluid">
-		<!-- Боковое меню теперь находится наверху страницы и занимает полную ширину -->
-
-
-		<!-- Верхнее меню перемещено на место бокового меню -->
 		<nav class="navbar navbar-expand-lg navbar-light bg-light">
 			<a class="navbar-brand" href="/school/">
 				<img src="../../assets/GERMAX.jpg" alt="logo" style="height: 50px;">
@@ -57,19 +53,29 @@
 		</nav>
 
 		<div class="main-content d-flex">
+			<div id="background-image" class="background-image-upload">
+				<label for="background-upload" class="custom-background-upload fas" title="charger votre image de fond">
+					<input id="background-upload" type="file" style="display:none;" onchange="loadBackground(event)" />
+				</label>
+			</div>
 			<div class="nav flex-column nav-pills" id="v-pills-tab" role="tablist" aria-orientation="vertical">
 				<a class="nav-link active" id="locationsLink" href="./subpages/loansCalendar.html">Calendrier des
 					locations</a>
 				<a class="nav-link" id="emprunteursLink" href="./subpages/client/addClient.html">Gestion des
 					locataires</a>
 				<a class="nav-link" id="indicateursLink" href="./subpages/mainIndicators.html">Indicateurs clés</a>
+				<a class="nav-link" id="indicateursLink" href="./subpages/mainIndicators.html">Addresser une demande de
+					location</a>
 			</div>
 			<div class="content">
 				<div class="row mb-4">
 					<div class="col-md-4">
 						<div class="profile-img">
-							<img src="https://via.placeholder.com/150" alt="фото профиля" class="img-thumbnail">
-							<input type="file" name="file" />
+							<img src="https://via.placeholder.com/150" alt="фото профиля" class="img-thumbnail"
+								id="profile-picture">
+							<label for="file-upload" class="custom-file-upload fas" title="chargez votre photo">
+								<input id="file-upload" type="file" style="display:none;" onchange="loadFile(event)" />
+							</label>
 						</div>
 					</div>
 				</div>
@@ -117,12 +123,31 @@
 			</div>
 		</div>
 	</div>
-	<!-- Option 1: jQuery and Bootstrap Bundle (includes Popper) -->
 	<footer class="footer align-items-center justify-content-center text-center">
-			<a class="nav-link" href="link_to_other_page.html">
-				<i class="fa fa-question-circle" aria-hidden="true"></i> Foire Aux Questions
-			</a>
+		<a class="nav-link" href="link_to_other_page.html">
+			<i class="fa fa-question-circle" aria-hidden="true"></i> Foire Aux Questions
+		</a>
 	</footer>
+	<script>
+		const loadFile = function (event) {
+			let profilePicture = document.getElementById('profile-picture');
+			profilePicture.src = URL.createObjectURL(event.target.files[0]);
+			profilePicture.onload = function () {
+				URL.revokeObjectURL(profilePicture.src) // Free memory
+			}
+		};
+
+		const loadBackground = function (event) {
+			let backgroundImage = document.createElement('img'); // Создаём новый элемент img
+			backgroundImage.src = URL.createObjectURL(event.target.files[0]);
+			backgroundImage.onload = function () {
+				document.getElementById('background-image').style.backgroundImage = `url('${backgroundImage.src}')`; // Устанавливаем фон
+				URL.revokeObjectURL(backgroundImage.src) // Освобождаем память
+			}
+			document.getElementById('background-image').appendChild(backgroundImage); // Добавляем img в DOM
+		};
+	</script>
+
 	<script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
 	<script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.5.2/dist/umd/popper.min.js"></script>
 	<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
