elaborated main logic of dashboard for the inventory manager

--- a/germax-frontend/src/pages/users/admin/subpages/nav/notfifcations.html
+++ b/germax-frontend/src/pages/users/admin/subpages/nav/notfifcations.html
@@ -52,5 +52,7 @@
 		  $('.modal').modal('show');
 		});
 	  </script>
+
+	  <!-- Оборудование пришло! (кладовщик сделал обновление в странице:) -->
 </body>
 </html>
