--- a/germax-frontend/src/pages/users/admin/dashboard.html
+++ b/germax-frontend/src/pages/users/admin/dashboard.html
@@ -59,13 +59,16 @@
 				</label>
 			</div>
 			<div class="nav flex-column nav-pills" id="v-pills-tab" role="tablist" aria-orientation="vertical">
-				<a class="nav-link active" id="locationsLink" href="./subpages/loansCalendar.html">Calendrier des
+				<a class="nav-link active" id="locationsLink" href="./dashboard.html">Profil</a>
+				<a class="nav-link" id="locationsLink" href="./subpages/loansCalendar.html">Calendrier des
 					locations</a>
 				<a class="nav-link" id="emprunteursLink" href="./subpages/client/addClient.html">Gestion des
 					locataires</a>
 				<a class="nav-link" id="indicateursLink" href="./subpages/mainIndicators.html">Indicateurs clés</a>
-				<a class="nav-link" id="indicateursLink" href="./subpages/mainIndicators.html">Addresser une demande de
+				<a class="nav-link" id="indicateursLink" href="./subpages/loansRequests/loansRequest.html">Addresser une demande de
 					location</a>
+				<a class="nav-link" id="indicateursLink" href="./subpages/loansRequests/orderNewEquipment.html">Commander un matériel</a>
+				<a class="nav-link" id="indicateursLink" href="./subpages/loansRequests/contactRentalManager.html">Contacter le gestionnaire d'inventaire</a>
 			</div>
 			<div class="content">
 				<div class="row mb-4">
