--- a/germax-frontend/src/pages/users/teacher/subpages/loansRequests/form.html
+++ b/germax-frontend/src/pages/users/teacher/subpages/loansRequests/form.html
@@ -44,8 +44,12 @@
             <input type="text" class="form-control" id="rentalDates" placeholder="с 01.01.2024 по 10.01.2024">
         </div>
         <div class="form-group">
-            <label for="comments">Комментарии</label>
-            <textarea class="form-control" id="comments" rows="3"></textarea>
+            <label for="purpose">Цель аренды</label>
+            <textarea class="form-control" id="purpose" rows="2"></textarea>
+        </div>
+        <div class="form-group">
+            <label for="specialRequests">Специальные запросы (для специфического оборудования и др.)</label>
+            <textarea class="form-control" id="specialRequests" rows="3"></textarea>
         </div>
         <button type="submit" class="btn btn-primary">Отправить запрос</button>
     </form>
